additional categories/symbols - better scoring - suggestions for crawling/notif

--- a/technical_analysis/visualizations_output/quantum_scores.html
+++ b/technical_analysis/visualizations_output/quantum_scores.html
@@ -66,7 +66,7 @@
         <h3>Score Legend:</h3>
         <span class="legend-item" style="background-color: #006400;">&gt;=6: Great Buy</span><span class="legend-item" style="background-color: #32CD32;">4-5: Strong Buy</span><span class="legend-item" style="background-color: #90EE90;">2-3: OK Buy</span><span class="legend-item" style="background-color: #FFD700; color: #333;">0-1: Neutral</span><span class="legend-item" style="background-color: #FFA500;">-2 to -1: OK Sell</span><span class="legend-item" style="background-color: #FF4500;">&lt;-2: Best Sell</span>
         <p style="color: #666; font-size: 0.9em; margin-top: 10px;">
-            Enhanced scoring includes: RSI, StochRSI, MACD, Volume, Momentum, EMA50, GMMA, ATR, Support levels
+            Enhanced scoring includes: RSI (context-aware), ADX (trend strength), CCI (commodities), MACD, OBV, A/D (volume), EMA50/200, SMA50/200 (Golden Cross), GMMA, Volume, Momentum
         </p>
     </div>
     
@@ -100,53 +100,53 @@
         <tbody>
             <tr>
                 <td><strong>IONQ</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
                 <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
             </tr>
             <tr>
                 <td><strong>QTUM</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
             </tr>
             <tr>
                 <td><strong>QBTS</strong></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
             </tr>
             <tr>
                 <td><strong>RGTI</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
             </tr>
@@ -154,7 +154,7 @@
     </table>
     
     <p style="text-align: center; color: #666; margin-top: 20px;">
-        Generated from technical analysis indicators (RSI, StochRSI, EMA50, GMMA, ATR)
+        Generated from technical analysis indicators (RSI, ADX, CCI, MACD, OBV, A/D, EMA50/200, SMA50/200, GMMA, Volume, Momentum)
     </p>
 </body>
 </html>
