--- a/technical_analysis/visualizations_output/battery_storage_scores.html
+++ b/technical_analysis/visualizations_output/battery_storage_scores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Stock Scores Visualization - Precious_Metals</title>
+    <title>Stock Scores Visualization - Battery_Storage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1>Stock Technical Analysis Scores - Precious_Metals</h1>
+    <h1>Stock Technical Analysis Scores - Battery_Storage</h1>
     
         <div class="legend">
         <h3>Score Legend:</h3>
@@ -99,55 +99,42 @@
         </thead>
         <tbody>
             <tr>
-                <td><strong>GC=F</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
-            </tr>
-            <tr>
-                <td><strong>SI=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
-            </tr>
-            <tr>
-                <td><strong>PA=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><strong>QS</strong></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
                 <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
             </tr>
             <tr>
-                <td><strong>PL=F</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><strong>SLDP</strong></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+            </tr>
+            <tr>
+                <td><strong>AMSC</strong></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
             </tr>
         </tbody>
