--- a/technical_analysis/visualizations_output/test_scores.html
+++ b/technical_analysis/visualizations_output/test_scores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Stock Scores Visualization - Cryptocurrencies</title>
+    <title>Stock Scores Visualization - Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1>Stock Technical Analysis Scores - Cryptocurrencies</h1>
+    <h1>Stock Technical Analysis Scores - Test</h1>
     
         <div class="legend">
         <h3>Score Legend:</h3>
@@ -89,53 +89,22 @@
                 <th>1W (yfinance)<br><small>USD</small></th>
                 <th>2W (yfinance)<br><small>Gold</small></th>
                 <th>2W (yfinance)<br><small>USD</small></th>
-                <th>1M (yfinance)<br><small>Gold</small></th>
-                <th>1M (yfinance)<br><small>USD</small></th>
-                <th>2M (yfinance)<br><small>Gold</small></th>
-                <th>2M (yfinance)<br><small>USD</small></th>
-                <th>6M (yfinance)<br><small>Gold</small></th>
-                <th>6M (yfinance)<br><small>USD</small></th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td><strong>BTC-USD</strong></td>
+                <td><strong>AAPL</strong></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0<br><small style='font-size: 0.75em; opacity: 0.8;'>&uarr;10.5% &darr;5.2%</small></div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
             </tr>
             <tr>
-                <td><strong>ETH-USD</strong></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2</div></td>
-            </tr>
-            <tr>
-                <td><strong>SOL-USD</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><strong>GOOGL</strong></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
             </tr>
         </tbody>
     </table>
