--- a/technical_analysis/visualizations_output/cryptocurrencies_scores.html
+++ b/technical_analysis/visualizations_output/cryptocurrencies_scores.html
@@ -85,6 +85,10 @@
         <thead>
             <tr>
                 <th>Symbol</th>
+                <th>4H (yfinance)<br><small>Gold</small></th>
+                <th>4H (yfinance)<br><small>USD</small></th>
+                <th>1D (yfinance)<br><small>Gold</small></th>
+                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
@@ -102,44 +106,56 @@
         <tbody>
             <tr>
                 <td><strong>BTC-USD</strong></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.2</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.3</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
             </tr>
             <tr>
                 <td><strong>ETH-USD</strong></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.7</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
             </tr>
             <tr>
                 <td><strong>SOL-USD</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>-0.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>12.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
