--- a/technical_analysis/visualizations_output/precious_metals_scores.html
+++ b/technical_analysis/visualizations_output/precious_metals_scores.html
@@ -85,6 +85,10 @@
         <thead>
             <tr>
                 <th>Symbol</th>
+                <th>4H (yfinance)<br><small>Gold</small></th>
+                <th>4H (yfinance)<br><small>USD</small></th>
+                <th>1D (yfinance)<br><small>Gold</small></th>
+                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
@@ -103,13 +107,17 @@
             <tr>
                 <td><strong>GC=F</strong></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
@@ -117,14 +125,18 @@
             </tr>
             <tr>
                 <td><strong>SI=F</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -132,14 +144,18 @@
             </tr>
             <tr>
                 <td><strong>PA=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -147,14 +163,18 @@
             </tr>
             <tr>
                 <td><strong>PL=F</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
