--- a/technical_analysis/visualizations_output/battery_storage_scores.html
+++ b/technical_analysis/visualizations_output/battery_storage_scores.html
@@ -85,6 +85,10 @@
         <thead>
             <tr>
                 <th>Symbol</th>
+                <th>4H (yfinance)<br><small>Gold</small></th>
+                <th>4H (yfinance)<br><small>USD</small></th>
+                <th>1D (yfinance)<br><small>Gold</small></th>
+                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
@@ -102,28 +106,17 @@
         <tbody>
             <tr>
                 <td><strong>QS</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-            </tr>
-            <tr>
-                <td><strong>SLDP</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.4</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -131,15 +124,38 @@
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
             </tr>
             <tr>
-                <td><strong>AMSC</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><strong>SLDP</strong></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+            </tr>
+            <tr>
+                <td><strong>AMSC</strong></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
