--- a/technical_analysis/visualizations_output/miner_hpc_scores.html
+++ b/technical_analysis/visualizations_output/miner_hpc_scores.html
@@ -85,6 +85,10 @@
         <thead>
             <tr>
                 <th>Symbol</th>
+                <th>4H (yfinance)<br><small>Gold</small></th>
+                <th>4H (yfinance)<br><small>USD</small></th>
+                <th>1D (yfinance)<br><small>Gold</small></th>
+                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
@@ -102,10 +106,14 @@
         <tbody>
             <tr>
                 <td><strong>MNRS</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -117,14 +125,18 @@
             </tr>
             <tr>
                 <td><strong>IREN</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -132,8 +144,12 @@
             </tr>
             <tr>
                 <td><strong>BMNR</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.3</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.8</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -147,14 +163,18 @@
             </tr>
             <tr>
                 <td><strong>HUT</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -162,14 +182,18 @@
             </tr>
             <tr>
                 <td><strong>CIFR</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -177,14 +201,18 @@
             </tr>
             <tr>
                 <td><strong>WULF</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -192,12 +220,16 @@
             </tr>
             <tr>
                 <td><strong>CORZ</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -207,14 +239,18 @@
             </tr>
             <tr>
                 <td><strong>BITF</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -222,14 +258,18 @@
             </tr>
             <tr>
                 <td><strong>CLSK</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
                 <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>-0.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -237,12 +277,16 @@
             </tr>
             <tr>
                 <td><strong>WGMI</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
