--- a/technical_analysis/visualizations_output/silver_miners_esg_scores.html
+++ b/technical_analysis/visualizations_output/silver_miners_esg_scores.html
@@ -85,6 +85,10 @@
         <thead>
             <tr>
                 <th>Symbol</th>
+                <th>4H (yfinance)<br><small>Gold</small></th>
+                <th>4H (yfinance)<br><small>USD</small></th>
+                <th>1D (yfinance)<br><small>Gold</small></th>
+                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
@@ -102,14 +106,18 @@
         <tbody>
             <tr>
                 <td><strong>PAAS</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.3</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -117,14 +125,18 @@
             </tr>
             <tr>
                 <td><strong>AG</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -132,14 +144,18 @@
             </tr>
             <tr>
                 <td><strong>WPM</strong></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -147,14 +163,18 @@
             </tr>
             <tr>
                 <td><strong>HL</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -162,14 +182,18 @@
             </tr>
             <tr>
                 <td><strong>SVM</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
