--- a/technical_analysis/visualizations_output/tech_stocks_scores.html
+++ b/technical_analysis/visualizations_output/tech_stocks_scores.html
@@ -85,6 +85,10 @@
         <thead>
             <tr>
                 <th>Symbol</th>
+                <th>4H (yfinance)<br><small>Gold</small></th>
+                <th>4H (yfinance)<br><small>USD</small></th>
+                <th>1D (yfinance)<br><small>Gold</small></th>
+                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
@@ -102,14 +106,18 @@
         <tbody>
             <tr>
                 <td><strong>TMUS</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -117,14 +125,18 @@
             </tr>
             <tr>
                 <td><strong>NOW</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -132,14 +144,18 @@
             </tr>
             <tr>
                 <td><strong>PATH</strong></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.2</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -147,14 +163,18 @@
             </tr>
             <tr>
                 <td><strong>DLO</strong></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>-0.0</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-3.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -162,14 +182,18 @@
             </tr>
             <tr>
                 <td><strong>PGY</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.9</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-3.3</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
